fix: improve icons, prevent icons cropping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -166,6 +166,7 @@ ol {
 svg {
   vertical-align: text-bottom;
   font-size: 1.2em;
+  overflow: visible;
 }
 
 /* horizontal rule */
